--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "IPD"
-version = "0.0.1"
+version = "1.0.0"
 authors = [
   { name="jumpingtj" },
 ]
 description = "A tool for the iterated prisoners dilemma"
-readme = "README.md"
+readme = "readme-pypi.md"
 requires-python = ">=3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
